# pnu-infosec-challenge

./: README.md  pyproject.toml
bckp_task1_image_retrieval/: pyproject.toml  training_metrics.csv
bckp_task1_image_retrieval/configs/: dataset_collection.json  efficientnet_v2_m.json  yolov10.json
report/: .gitignore  conference_101719.aux  conference_101719.fdb_latexmk  conference_101719.fls  conference_101719.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  preamble.tex  references.bib
task1_image_retrieval/: .gitignore  main.py  predict_video.py  pyproject.toml  training_metrics_detr.csv
task1_image_retrieval/configs/: arcface_config.yaml  cropping_config.yaml  dataset_collection.json  rtdetr-l.yaml  rtdetr-x.yaml  rtdetr_config.json  rtdetr_v2.json  scraper_config.yaml  scraper_config_supplemental.yaml  video_dataset.yaml  yolo10l.yaml  yolo10x.yaml
task1_image_retrieval/models/: arcface.py  loaders.py
task1_image_retrieval/models/classifier/efficientnetv2/: efficientnetv2.py
task1_image_retrieval/models/classifier/swin_transformer/: swin_transformer.py
task1_image_retrieval/models/classifier/swin_transformer_v2/: swin_transformer_v2.py  utils.py
task1_image_retrieval/models/detector/rtdetr/: box_ops.py  denoising.py  hybrid_encoder.py  presnet.py  rtdetr.py  rtdetr_decoder.py  rtdetrv2_decoder.py  utils.py
task1_image_retrieval/models/detector/rtdetr_v2/: __init__.py  box_ops.py  rtdetr.py  rtdetr_decoder.py
task1_image_retrieval/models/detector/yolo11/: attention.py  basic.py  c3k.py  head.py  utils.py  yolo11.py
task1_image_retrieval/models/detector/yolov10/: model.py  modules.py
task1_image_retrieval/modules/: detection_dataset.py  image_scrapper.py  scraper_collector.py  utils.py
task1_image_retrieval/scripts/: crop_raw_dataset.py  download_youtube.py  final_experiment.py  generate_composite_figure.py  predict_video.py  run_cropping.py  run_scraper.py  run_scrapper.py  scrap_dataset.py  test.py  train.py  train_arcface.py  train_detection.py  train_detr.py  train_yolo.py  video_to_yolo.py  visualize_dataset.py  visualize_detr_predictions.py  visualize_yolo_predictions.py  yolo10.py
task1_image_retrieval/utils/: dataset.py  detection_loss.py  detr_loss.py  early_stopping.py  metrics.py  training_utilities.py
task2_llm_rag/: .gitignore  data_loader.py  llm.py  llm_test_report.md  main.py  nodes.py  pyproject.toml  rag_test_report.md  state.py  test_chat_endpoint.py  test_queries.json  test_rag_endpoint.py  workflow.py  workflow_router.py
task2_llm_rag/data/: loader.py
task2_llm_rag/nodes/: __init__.py  input_guardrail.py  output_guardrail.py  retrieval.py
task2_llm_rag/schemas/: api.py  guardrails.py
task2_llm_rag/tools/: rag.py
(+17 files in other folders)
