[project]
name = "pnu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
