[project]
name = "pnu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=1.2.3",
    "imagehash>=4.3.2",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.1",
    "langgraph>=1.0.5",
    "opencv-python>=4.12.0.88",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
