[project]
name = "task1-image-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.2",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
