[project]
name = "task2-llm-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "fastapi[standard]>=0.125.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
]
